--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "@normalizex/honeypot-is",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "library targeting of the honeypot.is API.",
   "main": "dist/index.js",
   "types": "./dist/index.d.ts",
-  "type": "module",
   "engines": {
     "node": ">=11.0.0"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && webpack",
     "prepublish": "npm run build"
   },
   "publishConfig": {
@@ -21,7 +20,7 @@
   },
   "homepage": "https://github.com/Normalizex/honeypot-is#readme",
   "author": "Normalizex",
-  "license": "Apache-2.0",
+  "license": "MIT",
   "keywords": [
     "web3",
     "axios",
@@ -34,7 +33,18 @@
     "async"
   ],
   "devDependencies": {
-    "typescript": "^4.6.4"
+    "assert": "^2.0.0",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
+    "fork-ts-checker-webpack-plugin": "^7.2.13",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "terser-webpack-plugin": "^5.3.6",
+    "ts-loader": "^9.3.1",
+    "typescript": "^4.6.4",
+    "util": "^0.12.4",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   },
   "dependencies": {
     "axios": "^0.27.2"
